assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
* {
  margin: 0;
  padding: 0;
}

body {
  color: white;
  font-family: "Open Sans";
  font-size: 16px;
  background-image: url("../img/background.jpg");
  background-color: black;
}

@media (min-width: 1400px) {
  .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
    max-width: 1520px;
  }
}
nav.navbar {
  background-color: black;
  height: 50px;
  font-family: "Centure Gothic";
}
@media screen and (max-width: 991px) {
  nav.navbar {
    height: 70px;
    padding: 0;
  }
}
nav.navbar-expand-lg .navbar-nav .nav-link {
  padding-left: 10px;
  padding-right: 10px;
}
nav.navbar .container-fluid {
  padding-left: 0;
  padding-right: 0;
}
nav.navbar .navbar-toggler {
  margin-left: 16px;
}
nav .navbar-collapse {
  background: black;
}
nav .nav-link {
  color: white;
  font-size: 16px;
}
nav .nav-link.active {
  text-decoration: underline;
}
nav .nav-link.main {
  font-family: "Centure Gothic Bold";
}
nav .nav-link:hover {
  text-decoration: underline;
}

.footer {
  padding: 30px 0;
  min-height: 190px;
  background-color: black;
  display: flex;
  justify-content: center;
}
.footer ul {
  padding-left: 0;
  display: flex;
  flex-direction: row;
  gap: 50px;
}
@media screen and (max-width: 900px) {
  .footer ul {
    gap: 10px;
  }
}
@media screen and (max-width: 650px) {
  .footer ul {
    flex-direction: column;
    text-align: center;
  }
}

.to_trains {
  text-align: center;
  padding: 30px 10px;
  height: 100vh;
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/meyersMens.png") center;
  background-size: cover;
}
@media screen and (max-width: 650px) {
  .to_trains {
    height: auto;
    padding: 50px 10px;
  }
}
.to_trains h1 {
  font-family: "Algerian TYGRA";
  font-size: 38px;
  text-align: center;
}
.to_trains p {
  font-size: 15px;
  color: #9A9A9A;
}
.to_trains .socials {
  display: flex;
  flex-direction: column;
  gap: 20px;
  align-items: center;
  max-width: 362px;
  width: 100%;
}
.to_trains .socials a {
  width: 100%;
  height: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  color: #ffffff;
  gap: 20px;
  background-color: rgba(40, 40, 40, 0.3);
  border-radius: 50px;
  box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.2509803922);
}

.divider {
  width: 46px;
  height: 3px;
  background: white;
}

.mb-30 {
  margin-bottom: 30px;
}

.mb-50 {
  margin-bottom: 50px;
}

.mb-70 {
  margin-bottom: 70px;
}
@media screen and (max-width: 1200px) {
  .mb-70 {
    margin-bottom: 30px;
  }
}

td {
  background-color: rgba(40, 40, 40, 0.3);
}

td.sword {
  background: rgba(12, 86, 19, 0.1);
}

td.saber {
  background: rgba(12, 33, 86, 0.1);
}

td.rapier {
  background: rgba(94, 29, 96, 0.1);
}

td.buckler {
  background: rgba(86, 65, 12, 0.1);
}

.button_link {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  height: 50px;
  max-width: 390px;
  padding: 0 50px;
  box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.2509803922);
  border-radius: 50px;
  font-family: "Algerian TYGRA";
  background-color: rgba(40, 40, 40, 0.3);
  color: white;
  font-size: 20px;
  text-decoration: none;
  border: none;
}
@media screen and (max-width: 600px) {
  .button_link {
    padding: 0 25px;
  }
}
@media screen and (max-width: 400px) {
  .button_link {
    font-size: 15px;
  }
}
.button_link:hover {
  background-color: rgba(40, 40, 40, 0.6);
}

.controls-wrapper {
  width: 100%;
  position: relative;
}
.controls-wrapper .controls {
  top: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 2;
  pointer-events: none;
  padding: 0 10px;
  display: none;
}
@media screen and (max-width: 1000px) {
  .controls-wrapper .controls {
    display: flex;
  }
}
.controls-wrapper .controls .prevArrow, .controls-wrapper .controls .nextArrow {
  pointer-events: auto;
}

.prevArrow:hover, .nextArrow:hover {
  cursor: pointer;
  color: white;
}

.map {
  position: relative;
  filter: grayscale(1);
}
.map:after {
  content: "''";
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 2;
  top: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.1);
  pointer-events: none;
}

.main-page .promo {
  min-height: calc(100vh - 50px);
}
@media screen and (max-width: 1200px) {
  .main-page .promo {
    height: auto;
  }
}
.main-page .promo .promo-top {
  background: url("../img/banner.jpg") center;
  background-size: cover;
  padding-top: 75px;
  height: 650px;
}
@media screen and (max-width: 1200px) {
  .main-page .promo .promo-top {
    height: calc(100vh - 50px);
  }
}
.main-page .promo .logo-text {
  max-width: 874px;
  height: 148px;
}
@media screen and (max-width: 900px) {
  .main-page .promo .logo-text {
    max-width: 100%;
    height: auto;
  }
}
.main-page .what {
  height: 100vh;
  padding-top: 30px;
  padding-bottom: 50px;
  line-height: 26px;
}
@media screen and (max-width: 1200px) {
  .main-page .what {
    height: 100%;
    padding-top: 20px;
    padding-bottom: 30px;
  }
}
.main-page .what p {
  margin: 0;
}
.main-page .what h2 {
  font-family: "Algerian TYGRA";
  font-size: 48px;
  text-align: center;
  margin-bottom: 50px;
}
@media screen and (max-width: 500px) {
  .main-page .what h2 {
    font-size: 30px;
  }
}
.main-page .what .row {
  gap: 22px;
  height: 100%;
  flex-wrap: nowrap;
}
@media screen and (max-width: 1200px) {
  .main-page .what .row {
    flex-direction: column;
    flex-wrap: wrap;
  }
}
.main-page .what .left, .main-page .what .right {
  display: flex;
  border-radius: 10px;
  height: 100%;
  max-height: 850px;
  box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.2509803922);
}
.main-page .what .left {
  background-image: url("../img/background.jpg");
  filter: brightness(1.5);
  color: #9A9A9A;
  font-family: "Centure Gothic";
  font-size: 20px;
  padding: 40px;
  text-align: center;
}
/* ... */

